## File created by the gnome-build tools


www = @WWW@
wwwdisk = @WWWDISK@

wwwdir = ${wwwdisk}/kml/images

www_DATA = \
  4bit_reflectivity.png \
  3bit_reflectivity.png \
  4bit_reflectivity_clear.png \
  4bit_velocity.png \
  2bit_severeweather.png \
  3bit_reflectivity_clear.png \
  3bit_vad.png \
  3bit_velocity.png \
  3bit_vwp.png \
  4bit_echotops.png \
  4bit_precip.png \
  4bit_shear.png \
  n0r.png


4bit_reflectivity.png: ../share/4bit_reflectivity.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_reflectivity.scale "DBZ" 4bit_reflectivity.png

3bit_reflectivity.png: ../share/3bit_reflectivity.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/3bit_reflectivity.scale "DBZ" 3bit_reflectivity.png

4bit_reflectivity_clear.png: ../share/4bit_reflectivity_clear.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_reflectivity_clear.scale "DBZ" 4bit_reflectivity_clear.png

4bit_velocity.png: ../share/4bit_velocity.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_velocity.scale "DBZ" 4bit_velocity.png

2bit_severeweather.png: ../share/2bit_severeweather.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/2bit_severeweather.scale "DBZ" 2bit_severeweather.png

3bit_reflectivity_clear.png: ../share/3bit_reflectivity_clear.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/3bit_reflectivity_clear.scale "DBZ" 3bit_reflectivity_clear.png

3bit_vad.png: ../share/3bit_vad.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/3bit_vad.scale "DBZ" 3bit_vad.png

3bit_velocity.png: ../share/3bit_velocity.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/3bit_velocity.scale "DBZ" 3bit_velocity.png

3bit_vwp.png: ../share/3bit_vwp.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/3bit_vwp.scale "DBZ" 3bit_vwp.png

4bit_echotops.png: ../share/4bit_echotops.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_echotops.scale "DBZ" 4bit_echotops.png

4bit_precip.png: ../share/4bit_precip.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_precip.scale "DBZ" 4bit_precip.png

4bit_shear.png: ../share/4bit_shear.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/4bit_shear.scale "DBZ" 4bit_shear.png

n0r.png: ../share/n0r.scale Makefile ../scripts/makekey2.sh
	../scripts/makekey2.sh ../share/n0r.scale "DBZ" n0r.png

