## File created by the gnome-build tools


dist_pkgdata_DATA = \
  4bit_reflectivity.scale\
  3bit_reflectivity.scale \
  4bit_reflectivity_clear.scale \
  4bit_velocity.scale \
  2bit_severeweather.scale \
  3bit_reflectivity_clear.scale \
  3bit_vad.scale \
  3bit_velocity.scale \
  3bit_vwp.scale \
  4bit_echotops.scale \
  4bit_precip.scale \
  4bit_shear.scale
