## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = \
	libNIDS.la

libNIDS_la_SOURCES = \
	get.h       \
	msg_header.c       \
	prod_desc.c       \
	product_symbology.c       \
	radial.c       \
	raster.c       \
	main.c       \
	product_symbology.h       \
	msg_header.h       \
	prod_desc.h       \
	radial.h       \
	radial2raster.c       \
	raster.h       \
	arrow.c       \
	vector.c       \
	precip.c       \
	text.c       \
	arrow.h       \
	barb.c       \
	barb.h       \
	vector.h       \
	v_vector.h       \
	v_vector.c       \
	precip.h       \
	d_radial.c       \
	d_radial.h       \
	circle.h       \
	circle.c       \
	text.h       \
	compression.c

libNIDS_la_LDFLAGS = \
	-lm

