## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-DPACKAGE_PKG_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = \
	libNIDS.la

libNIDS_la_SOURCES = \
	get.h       \
	msg_header.c       \
	prod_desc.c       \
	product_symbology.c       \
	radial.c       \
	raster.c       \
	main.c       \
	product_symbology.h       \
	msg_header.h       \
	prod_desc.h       \
	radial.h       \
	raster.h       \
	arrow.c       \
	vector.c       \
	precip.c       \
	text.c       \
	arrow.h       \
	barb.c       \
	barb.h       \
	vector.h       \
	v_vector.h       \
	v_vector.c       \
	precip.h       \
	d_radial.c       \
	d_radial.h       \
	circle.h       \
	circle.c       \
	text.h       \
	product_dependent_desc.c       \
	product_dependent_desc.h       \
	color.c       \
	color.h       \
	storm_id.c       \
	storm_id.h       \
	forecast.h       \
	forecast.c       \
	linked_vector.c       \
	linked_vector.h       \
	error.h       \
	graphic_alphanumeric.c       \
	graphic_alphanumeric.h       \
	tabular_alphanumeric.h       \
	tabular_alphanumeric.c       \
	v_linked_vector.c       \
	v_linked_vector.h       \
	v_text.h       \
	v_text.c       \
	d_precip.c       \
	d_precip.h       \
	point.c       \
	point.h       \
	point_feature.c       \
	point_feature.h       \
	hail.h       \
	hail.c       \
	image.c       \
	image.h       \
	tvs.c       \
	tvs.h       \
	etvs.h       \
	etvs.c       \
	hail_positive.c       \
	hail_positive.h       \
	hail_probable.h       \
	hail_probable.c       \
	mesocyclone.c       \
	mesocyclone.h       \
	proj.c       \
	myzlib.c       \
	myzlib.h       \
	prod_info.c       \
	prod_info.h

libNIDS_la_LDFLAGS =           \
	-lm           \
	-lbz2           \
	-lproj           \
	-lz

